[refactor][product] 사용하지 않는 method 삭제