@@ -1,8 +1,6 @@
 package com.ll.products.domain.recommendation.service;
 
-import com.ll.products.domain.cart.service.CartService;
 import com.ll.products.domain.history.service.HistoryFacadeService;
-import com.ll.products.domain.product.exception.ProductNotFoundException;
 import com.ll.products.domain.product.model.entity.Product;
 import com.ll.products.domain.product.model.entity.ProductStatus;
 import com.ll.products.domain.product.repository.ProductRepository;
@@ -45,17 +43,7 @@ public class RecommendationService {
         return vectorStoreService.searchSimilarProducts(embedding, limit);
     }
 
-    // 3. 상품 인덱스 삭제
-    public void deleteProductIndex(String productCode) {
-        try {
-            vectorStoreService.deleteProductByCode(productCode);
-            log.info("상품 색인 삭제 완료: {}", productCode);
-        } catch (Exception e) {
-            log.error("상품 색인 삭제 실패: {}", productCode, e);
-        }
-    }
-
-    // 4. 유저 상세 조회 기록 기반 상품 추천
+    // 3. 유저 상세 조회 기록 기반 상품 추천
     public List<RecommendationResponse> recommendProductsByViewHistory(String userCode, int limit) {
         List<String> viewList = historyFacadeService.getViewList(userCode);
         if (viewList == null || viewList.isEmpty()) {
@@ -67,7 +55,7 @@ public class RecommendationService {
         return excludeViewedProducts(recommendations, viewList, limit);
     }
 
-    // 5. 유저 검색 기록 기반 상품 추천
+    // 4. 유저 검색 기록 기반 상품 추천
     public List<RecommendationResponse> recommendProductsBySearchHistory(String userCode, int limit) {
         List<String> searchList = historyFacadeService.getSearchList(userCode);
         if (searchList == null || searchList.isEmpty()) {
@@ -79,7 +67,7 @@ public class RecommendationService {
         return vectorStoreService.searchSimilarProducts(embedding, limit);
     }
 
-    // 6. 상세 조회 목록 기반 상품 추천(with llm)
+    // 5. 상세 조회 목록 기반 상품 추천(with llm)
     public List<RecommendationResponse> recommendProductsByLlm(String userCode, int limit) {
         List<String> viewList = historyFacadeService.getViewList(userCode);
         if (viewList == null || viewList.isEmpty()) {
@@ -118,19 +106,6 @@ public class RecommendationService {
         log.info("전체 상품 재색인 완료: 성공 {}개, 실패 {}개", result.successCount, result.failCount);
     }
 
-    // 상품 조회
-    private Product findProductByCode(String productCode) {
-        return productRepository.findByCodeAndIsDeletedFalse(productCode)
-                .orElseThrow(() -> new ProductNotFoundException(productCode));
-    }
-
-    // 상품 임베딩
-    private float[] generateProductEmbedding(Product product) {
-        ProductVectorDocument document = ProductVectorDocument.from(product);
-        String embeddingText = document.generateEmbeddingText();
-        return embeddingService.generateEmbedding(embeddingText);
-    }
-
     // 벡터 point 생성
     private ProductVectorPoint createVectorPoint(Product product) {
         ProductVectorDocument document = ProductVectorDocument.from(product);
@@ -166,7 +141,7 @@ public class RecommendationService {
         if (embeddings.isEmpty()) {
             throw new RuntimeException("조회 가능한 벡터가 없습니다");
         }
-        int vectorSize = embeddings.get(0).length;
+        int vectorSize = embeddings.getFirst().length;
         float[] average = new float[vectorSize];
 
         for (float[] embedding : embeddings) {
@@ -268,7 +243,7 @@ public class RecommendationService {
                         payloadMap.get("description").getStringValue(),
                         payloadMap.get("price").getIntegerValue()
                 ));
-            };
+            }
         }
         log.info("llm input: {}", text);
         return text.toString();
@@ -298,7 +273,7 @@ public class RecommendationService {
                    - 8-2. 스포츠: 한 종목을 좋아하면 그 종목에 집중하는 경향이 있음. 한 팀을 좋아하면 해당 팀에 집중하는 경향이 있음.
                          예) 축구 굿즈 조회 -> 농구·야구 굿즈 추천 (금지)
                          예) 첼시FC 굿즈 조회 -> 맨체스터 유나이티드 굿즈 추천 (금지)
-                   - 8-3. 영화: 특정 장르의 영화를 좋아하면 유사한 장르의 다른 영화도 좋아할 가능성 높음 
+                   - 8-3. 영화: 특정 장르의 영화를 좋아하면 유사한 장르의 다른 영화도 좋아할 가능성 높음
                          예) 인터스텔라 굿즈 조회 -> 마션 굿즈 추천 (가능)
                          예) 인터스텔라 굿즈 조회 -> 라라랜드 굿즈 추천 (금지)
                    - 8-4. 아이돌: 특정 아이돌을 좋아하면 해당 아이돌에 집중하는 경향이 있음
@@ -306,7 +281,7 @@ public class RecommendationService {
                          예) 뉴진스 굿즈 조회 -> 뉴진스 다른 굿즈 조회 (가능)
                    - 8-5. 게임: 특정 장르의 게임을 좋아하면 그 장르에 집중하는 경향이 있음.
                          예) 카운터 스트라이크 굿즈 조회 -> 닌텐도 굿즈 조회 (금지)
-                         
+                
                 [출력 예시]
                 상품명: 디디에 드록바 친필싸인 유니폼. 카테고리: 축구. 설명: 09시즌 첼시 홈 유니폼. 추천 사유: 같은 시즌 인기 선수 관련 굿즈 관심 가능성 판단.
                 
